fix: css vars aligned with builder

--- a/themes/bootstrap/scss/_vars.scss
+++ b/themes/bootstrap/scss/_vars.scss
@@ -199,17 +199,17 @@
   --vf-border-width-checkbox-b: var(--vf-border-width-input-b);
   --vf-border-width-checkbox-l: var(--vf-border-width-input-l);
 
-  --vf-border-width-dropdown: var(--vf-border-width-input-t) var(--vf-border-width-input-r) var(--vf-border-width-input-b) var(--vf-border-width-input-l);
-  --vf-border-width-btn: var(--vf-border-width-input-t) var(--vf-border-width-input-r) var(--vf-border-width-input-b) var(--vf-border-width-input-l);
+  --vf-border-width-dropdown: #{$input-border-width};
+  --vf-border-width-btn: #{$input-border-width};
   --vf-border-width-toggle: 0.125rem;
   --vf-border-width-tag: 1px;
 
   --vf-shadow-input: #{$input-box-shadow};
-  --vf-shadow-input-hover: var(--vf-shadow-input);
+  --vf-shadow-input-hover: #{$input-box-shadow};
   --vf-shadow-input-focus: #{$input-focus-box-shadow};
   --vf-shadow-handles: 0px 0px 0px 0px rgba(0,0,0,0);
-  --vf-shadow-handles-hover: var(--vf-shadow-input-hover);
-  --vf-shadow-handles-focus: var(--vf-shadow-input-focus);
+  --vf-shadow-handles-hover: #{$input-box-shadow};
+  --vf-shadow-handles-focus: #{$input-focus-box-shadow};
   --vf-shadow-btn: #{$btn-box-shadow};
   --vf-shadow-dropdown: 0px 0px 0px 0px rgba(0,0,0,0);
 
